[tool.poetry]
name = "origin-of-life"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{ include = "ool", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"
numpy = "^2.1.0"
raylib = "^5.0.0.3"
imgui = {extras = ["pyglet"], version = "^2.0.0"}
dearpygui = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
